--- a/06-estructuras_datos.qmd
+++ b/06-estructuras_datos.qmd
@@ -1,12 +1,15 @@
-﻿# Estructuras de datos {#sec-estructuras_datos}
+﻿---
+# Este bloque vacío obliga a Quarto a entender que aquí empieza un documento nuevo
+---
 
-## Función j_eval y j_plot en R
+# Estructuras de datos {#sec-estructuras_datos}
+
+## Funciones j_eval y j_plot en R
 
 ```{r}
-#| label: setup_benchmark
+#| label: j_eval_j_plot
 #| code-fold: true
 # #| include: false
-#| results: asis
 source("./docs/j_eval_j_plot.r")
 ```
 
